# Semestr5-JFTT-Compiler

./: .gitignore  IR_file  IR_file_memory  a  a.gbl  a.mr  ast.txt  debug.txt  ideas.txt  memory_map.txt  output.txt  readme.md  requirements.txt  tree.txt
scripts/: IR_file  compile.py  comple.sh  memory_map.txt  rebuild_tree.sh
src/: setup.py
src/compiler/: ast_builder.py  ast_nodes.py  instructions.py  memory_manager.py  parser.py  semantic_analyzer.py  semantic_error.py  symbol_table.py  utils.py
src/compiler/TAC_Operations/: arithmetic.py  tac_generator.py
src/compiler/intermediate_rep/: IR_generator.py  IR_ops.py  IR_ops_old.py  arcopy.py  arithmetic.py  label_manager.py  procinfo.py
test_programs/: binary.geb  gcd.geb  multiplication.geb  negative.geb  nospaces.geb  semantic_error.geb  silnia.geb  sito.geb  sort.geb
test_programs/testy_lab4/: example1.imp  example8.imp
tree-sitter-jftt/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-jftt/bindings/c/: tree-sitter-jftt.h  tree-sitter-jftt.pc.in
tree-sitter-jftt/bindings/go/: binding.go  binding_test.go
tree-sitter-jftt/bindings/node/: binding.cc  index.js
tree-sitter-jftt/bindings/python/tests/: test_binding.py
tree-sitter-jftt/bindings/python/tree_sitter_jftt/: __init__.py  binding.c
tree-sitter-jftt/bindings/rust/: build.rs  lib.rs
tree-sitter-jftt/bindings/swift/TreeSitterJfttTests/: TreeSitterJfttTests.swift
tree-sitter-jftt/src/: grammar.json  node-types.json  parser.c
(+5 files in other folders)
